log

Tue 12 Mar 2024 01:04:09 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:13:1: error: expected ‘;’, ‘,’ or ‘)’ before ‘{’ token
   13 | {
      | ^
Compilation failed
3f4f40e
Tue 12 Mar 2024 01:04:28 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
802db46
Tue 12 Mar 2024 01:07:08 AM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
6f4ee08
Tue 12 Mar 2024 01:08:23 AM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:45:17: error: ‘sizeNew’ undeclared (first use in this function); did you mean ‘size’?
   45 |   printf("%i", *sizeNew);
      |                 ^~~~~~~
      |                 size
exercises.c:45:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5e4b31c
Tue 12 Mar 2024 01:08:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
558dc76
Tue 12 Mar 2024 01:08:45 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
c323bee
